--- a/museumapp/index.html
+++ b/museumapp/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="STYLESHEET" href="museumapp_index.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Museumapp - Home</title>
 </head>
-<body>
-    
+<body class="background">
+    <main>
+        <h1 class="title"> Coen Mobile Museum App</h1>
+    <section class="gallery">
+        <h2>Gallery</h2>
+        <div class="grid">
+            <a href="./pages/detail-page.html">
+                <img class="img" alt="rembrand" src="https://lh3.googleusercontent.com/V3sjNgCA_Jssjm0sTKaPZeOwCv_vAPpjllrAF-yAB8UkqIlc6UX_jxJmxH_axVHTHxlK1E7Slecg8K5bIvSbDlw0zg=s0"/>
+            </a>
+            <a href="./pages/detail-page.html">
+                <img class="img" alt="vanmeer" src="https://lh3.googleusercontent.com/nfJiRConmXf4QR1bK3-E456qIEp2bYtuemyy3P3t7PonntyGJ8iPzFNKJPhZFCSSmJmj2AHePE4V1xl3BOz2NT8mfbNg=s0"/>
+            </a>
+            <a href="./pages/detail-page.html">
+                <img class="img" alt="Picasso" src="https://lh3.googleusercontent.com/J-mxAE7CPu-DXIOx4QKBtb0GC4ud37da1QK7CzbTIDswmvZHXhLm4Tv2-1H3iBXJWAW_bHm7dMl3j5wv_XiWAg55VOM=s0"/>
+            </a>
+            <a href="./pages/detail-page.html">
+                <img class="img" alt="rembrand" src="https://lh3.googleusercontent.com/inIJ6TyL4uYlpwOqHFGCCJ311jiFAnNQRMuitYedAVZvnFlAsjdKtIfAkhIQyZw-3ArH-oNdOQnxOQTKJEu2SuX_O-2f=s0"/>
+            </a>
+            <a href="./pages/detail-page.html">
+                <img class="img" alt="van gogh" src="https://lh3.googleusercontent.com/Ub2HAuuvtRVBk7nV94UCreg2lrndsC646xVC5I9CupMvRQM3TV-_F201NdHsqXo92qNqdVaQWLtuAa7A-qjX34dL1RWM=s0"/>
+            </a>
+        </div>
+    </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
