--- a/museumapp/detail-page.html
+++ b/museumapp/detail-page.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="STYLESHEET" href="museumapp_index.css" type="text/css">
+    <link rel="STYLESHEET" href="museumapp_detail-page.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <p>hoi</p>
-</body>
+    <body class="background">
+            <main>
+                <h1 class="title"> Coen Mobile Museum App</h1>
+                <div class="gallarybg detail_txt">
+                    <h2 class="txt-black">Een vrolijke vioolspeler, Gerard van Honthorst, 1623</h2>
+                    <img class="detail_img" alt="rembrand" src="https://lh3.googleusercontent.com/V3sjNgCA_Jssjm0sTKaPZeOwCv_vAPpjllrAF-yAB8UkqIlc6UX_jxJmxH_axVHTHxlK1E7Slecg8K5bIvSbDlw0zg=s0"/>      
+                    <div class="comment">
+                        <h2>comments</h2>
+                    </div>
+                    <div class="comments_vb">
+                    <h3>Arien said:</h3>
+                    <p>"This is definitely one of my favorites!"</p>
+                    </div>
+                    <div class="comments_vb for">
+                        <div class="sectio">
+                            <Label>Name</Label>
+                            <input type="text" class="name">
+                        </div>
+                        <div class="sectio">
+                            <Label>Message</Label>
+                            <input type="text_1" class="message">
+                        </div>
+                        <div class="button">
+                            <button class="button_des"type="default">Post your comment</button>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <footer></footer>
+    </body>
 </html>
